--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="apple-touch-icon" href="logocovid.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Covid Tracker</title>
   </head>
   <body>
